1. Добавим меню настроек в Mail и реализовал там необходимый функционал
Солгалие на обработку
Разрешения на пуш
Поделиться
Обратная связь

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.penta">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.SEND" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -70,6 +73,13 @@
             android:exported="true"
             android:parentActivityName=".MainActivity">
         </activity>
+
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="true"
+            android:parentActivityName=".MainActivity">
+        </activity>
+
 
     </application>
 
